--- a/html/artisti.html
+++ b/html/artisti.html
@@ -14,9 +14,9 @@
         <p><a href="/Illustrazione_contemporanea/html/index.html">Visioni<br>Illustrate</a></p>
         <nav>
             <ul class="header">
-                <li><a href="artisti.html">Artisti</a></li>
-                <li><a href="mostra.html">Mostra</a></li>
-                <li><a href="info_utili.html">Info utili</a></li>
+                <li><a href="/Illustrazione_contemporanea/artisti.html">Artisti</a></li>
+                <li><a href="/Illustrazione_contemporanea/mostra.html">Mostra</a></li>
+                <li><a href="/Illustrazione_contemporanea/info_utili.html">Info utili</a></li>
             </ul>
         </nav>
     </header>
@@ -44,73 +44,73 @@
             <hr class="solidred" align="left">
           <section class="art-sliding-cards">
             <div class="card-container">
-              <a href="/html/artists/johnson.html" class="cardsred">
+              <a href="/Illustrazione_contemporanea/html/artists/johnson.html" class="cardsred">
                 <div class="cardred">
-                  <img src="/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_DAWG_2x-scaled.jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_DAWG_2x-scaled.jpg" alt="">
                     <div class="container">
                       <h4>Adrian Johnson</h4>
                   </div>
                 </div>
               </a>
-              <a href="/html/artists/robertson.html" class="cardsred">
+              <a href="/Illustrazione_contemporanea/html/artists/robertson.html" class="cardsred">
                 <div class="cardred">
-                  <img src="/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (1).jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (1).jpg" alt="">
                     <div class="container">
                       <h4>Emily Robertson</h4>
                   </div>
                 </div>
               </a>
-              <a href="/html/artists/clark.html" class="cardsred">
+              <a href="/Illustrazione_contemporanea/html/artists/clark.html" class="cardsred">
                 <div class="cardred">
-                 <img src="/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (6).jpg" alt="">
+                 <img src="/Illustrazione_contemporanea/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (6).jpg" alt="">
                     <div class="container">
                       <h4>Hattie Clark</h4>
                   </div>
                 </div>
               </a>
-              <a href="/html/artists/icinori.html" class="cardsred">
+              <a href="/Illustrazione_contemporanea/html/artists/icinori.html" class="cardsred">
                 <div class="cardred">
-                  <img src="/img/artisti/icinori/icinori/AP_Icinori_MOXIE_3_2x.jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_MOXIE_3_2x.jpg" alt="">
                     <div class="container">
                       <h4>Icinori</h4>
                   </div>
                 </div>
               </a>
-              <a href="/html/artists/jullien.html" class="cardsred">
+              <a href="/Illustrazione_contemporanea/html/artists/jullien.html" class="cardsred">
                 <div class="cardred">
-                  <img src="/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (5).jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (5).jpg" alt="">
                     <div class="container">
                       <h4>Jean Jullien</h4>
                   </div>
                 </div>
               </a>
-              <a href="/html/artists/paukova.html" class="cardsred">
+              <a href="/Illustrazione_contemporanea/html/artists/paukova.html" class="cardsred">
                 <div class="cardred">
-                  <img src="/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Courier_Magazine_1-scaled.jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Courier_Magazine_1-scaled.jpg" alt="">
                     <div class="container">
                       <h4>Martina Paukova</h4>
                   </div>
                 </div>
               </a>
-              <a href="/html/artists/thompson.html" class="cardsred">
+              <a href="/Illustrazione_contemporanea/html/artists/thompson.html" class="cardsred">
                 <div class="cardred">
-                  <img src="/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (5).jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (5).jpg" alt="">
                     <div class="container">
                       <h4>Michelle Thompson</h4>
                   </div>
                 </div>
               </a>
-              <a href="/html/artists/blow.html" class="cardsred">
+              <a href="/Illustrazione_contemporanea/html/artists/blow.html" class="cardsred">
                 <div class="cardred">
-                <img src="/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (4).jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (4).jpg" alt="">
                     <div class="container">
                       <h4>Paul Blow</h4>
                   </div>
                 </div>
               </a>
-              <a href="/html/artists/mander.html" class="cardsred">
+              <a href="/Illustrazione_contemporanea/html/artists/mander.html" class="cardsred">
                 <div class="cardred">
-                  <img src="/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_havisamanda_2_2x-scaled.jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_havisamanda_2_2x-scaled.jpg" alt="">
                     <div class="container">
                       <h4>Sanna Mander</h4>
                   </div>
