--- a/html/artists/blow.html
+++ b/html/artists/blow.html
@@ -14,9 +14,9 @@
       <p><a href="/Illustrazione_contemporanea/html/index.html">Visioni<br>Illustrate</a></p>
       <nav>
           <ul class="header">
-              <li><a href="/html/artisti.html">Artisti</a></li>
-              <li><a href="/html/mostra.html">Mostra</a></li>
-              <li><a href="/html/info_utili.html">Info utili</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/artisti.html">Artisti</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/mostra.html">Mostra</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/info_utili.html">Info utili</a></li>
           </ul>
       </nav>
     </header>
@@ -36,16 +36,16 @@
             <hr class="solidred" align="left">
               <section class="image-container">
                 <div class="image-list">
-                  <img src="/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (1).jpg" alt="">
-                  <img src="/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (2).jpg" alt="">
-                  <img src="/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (3).jpg" alt="">
-                  <img src="/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (4).jpg" alt="">
-                  <img src="/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (5).jpg" alt="">
-                  <img src="/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (6).jpg" alt="">
-                  <img src="/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (7).jpg" alt="">
-                  <img src="/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (8).jpg" alt="">
-                  <img src="/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (9).jpg" alt="">
-                  <img src="/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow.jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (1).jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (2).jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (3).jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (4).jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (5).jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (6).jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (7).jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (8).jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (9).jpg" alt="">
+                  <img src="/Illustrazione_contemporanea/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow.jpg" alt="">
                 </div>
               </section>
     </main>
