--- a/html/artists/clark.html
+++ b/html/artists/clark.html
@@ -14,9 +14,9 @@
       <p><a href="/Illustrazione_contemporanea/html/index.html">Visioni<br>Illustrate</a></p>
       <nav>
           <ul class="header">
-              <li><a href="/html/artisti.html">Artisti</a></li>
-              <li><a href="/html/mostra.html">Mostra</a></li>
-              <li><a href="/html/info_utili.html">Info utili</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/artisti.html">Artisti</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/mostra.html">Mostra</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/info_utili.html">Info utili</a></li>
           </ul>
       </nav>
     </header>
@@ -36,15 +36,15 @@
             <hr class="solidred" align="left">
       <section class="image-container">
         <div class="image-list">
-          <img src="/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (1).jpg" alt="">
-          <img src="/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (2).jpg" alt="">
-          <img src="/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (3).jpg" alt="">
-          <img src="/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (4).jpg" alt="">
-          <img src="/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (5).jpg" alt="">
-          <img src="/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (6).jpg" alt="">
-          <img src="/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (7).jpg" alt="">
-          <img src="/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (8).jpg" alt="">
-          <img src="/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark.jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (1).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (2).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (3).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (4).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (5).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (6).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (7).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (8).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark.jpg" alt="">
         </div>
       </section>
     </main>
