--- a/html/artists/icinori.html
+++ b/html/artists/icinori.html
@@ -14,9 +14,9 @@
       <p><a href="/Illustrazione_contemporanea/html/index.html">Visioni<br>Illustrate</a></p>
       <nav>
           <ul class="header">
-              <li><a href="/html/artisti.html">Artisti</a></li>
-              <li><a href="/html/mostra.html">Mostra</a></li>
-              <li><a href="/html/info_utili.html">Info utili</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/artisti.html">Artisti</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/mostra.html">Mostra</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/info_utili.html">Info utili</a></li>
           </ul>
       </nav>
     </header>
@@ -36,21 +36,21 @@
             <hr class="solidred" align="left">
             <section class="image-container">
               <div class="image-list">
-                <img src="/img/artisti/icinori/icinori/AP_Icinori_ARCHEO_1_2x-scaled.jpg" alt="">
-                <img src="/img/artisti/icinori/icinori/AP_Icinori_ARCHEO_2_2x-scaled.jpg" alt="">
-                <img src="/img/artisti/icinori/icinori/AP_Icinori_DEDAR_2x.jpg" alt="">
-                <img src="/img/artisti/icinori/icinori/AP_Icinori_DEDAR_3_2x.jpg" alt="">
-                <img src="/img/artisti/icinori/icinori/AP_Icinori_DEDAR_4_2x.jpg" alt="">
-                <img src="/img/artisti/icinori/icinori/AP_Icinori_DEDAR_5_2x.jpg" alt="">
-                <img src="/img/artisti/icinori/icinori/AP_Icinori_ET-PUIS_PRINT_2_2x.jpg" alt="">
-                <img src="/img/artisti/icinori/icinori/AP_Icinori_ET-PUIS_PRINT_3_2x.jpg" alt="">
-                <img src="/img/artisti/icinori/icinori/AP_Icinori_MOXIE_1_2x.jpg" alt="">
-                <img src="/img/artisti/icinori/icinori/AP_Icinori_MOXIE_2_2x.jpg" alt="">
-                <img src="/img/artisti/icinori/icinori/AP_Icinori_MOXIE_3_2x.jpg" alt="">
-                <img src="/img/artisti/icinori/icinori/AP_Icinori_mullae_2x.jpg" alt="">
-                <img src="/img/artisti/icinori/icinori/AP_Icinori_Whereby-W_2x.jpg" alt="">
-                <img src="/img/artisti/icinori/icinori/AP_Icinori_whereby_2x.jpg" alt="">
-                <img src="/img/artisti/icinori/icinori/AP_Icinori_whereby_panorama_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_ARCHEO_1_2x-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_ARCHEO_2_2x-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_DEDAR_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_DEDAR_3_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_DEDAR_4_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_DEDAR_5_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_ET-PUIS_PRINT_2_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_ET-PUIS_PRINT_3_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_MOXIE_1_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_MOXIE_2_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_MOXIE_3_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_mullae_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_Whereby-W_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_whereby_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_whereby_panorama_2x.jpg" alt="">
               </div>
             </section>
     </main>
