--- a/html/artists/johnson.html
+++ b/html/artists/johnson.html
@@ -14,9 +14,9 @@
         <p><a href="/Illustrazione_contemporanea/html/index.html">Visioni<br>Illustrate</a></p>
         <nav>
             <ul class="header">
-                <li><a href="/html/artisti.html">Artisti</a></li>
-                <li><a href="/html/mostra.html">Mostra</a></li>
-                <li><a href="/html/info_utili.html">Info utili</a></li>
+                <li><a href="/Illustrazione_contemporanea/html/artisti.html">Artisti</a></li>
+                <li><a href="/Illustrazione_contemporanea/html/mostra.html">Mostra</a></li>
+                <li><a href="/Illustrazione_contemporanea/html/info_utili.html">Info utili</a></li>
             </ul>
         </nav>
     </header>
@@ -36,19 +36,19 @@
             <hr class="solidred" align="left">
             <section class="image-container">
               <div class="image-list">
-                <img src="/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_BURNT_OUT_2x.jpg" alt="">
-                <img src="/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_CARROT_2x-scaled.jpg" alt="">
-                <img src="/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_DAWG_2x-scaled.jpg" alt="">
-                <img src="/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_EASY_TIGER_2x-scaled.jpg" alt="">
-                <img src="/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_FRAWG_2x-scaled.jpg" alt="">
-                <img src="/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_LOCKDOWN_LION_2x-scaled.jpg" alt="">
-                <img src="/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_QUACK_2x-scaled.jpg" alt="">
-                <img src="/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_RUBBISH_2x.jpg" alt="">
-                <img src="/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_SCALLIES_2x.jpg" alt="">
-                <img src="/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_SML_2x-scaled.jpg" alt="">
-                <img src="/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_SPACEMAN_1_2x.jpg" alt="">
-                <img src="/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_SPACEMAN_2_2x.jpg" alt="">
-                <img src="/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_URSA_MINOR_URSA_MAJOR_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_BURNT_OUT_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_CARROT_2x-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_DAWG_2x-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_EASY_TIGER_2x-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_FRAWG_2x-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_LOCKDOWN_LION_2x-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_QUACK_2x-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_RUBBISH_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_SCALLIES_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_SML_2x-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_SPACEMAN_1_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_SPACEMAN_2_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_URSA_MINOR_URSA_MAJOR_2x.jpg" alt="">
               </div>
             </section>
     </main>
