--- a/html/artists/jullien.html
+++ b/html/artists/jullien.html
@@ -14,9 +14,9 @@
       <p><a href="/Illustrazione_contemporanea/html/index.html">Visioni<br>Illustrate</a></p>
       <nav>
           <ul class="header">
-              <li><a href="/html/artisti.html">Artisti</a></li>
-              <li><a href="/html/mostra.html">Mostra</a></li>
-              <li><a href="/html/info_utili.html">Info utili</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/artisti.html">Artisti</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/mostra.html">Mostra</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/info_utili.html">Info utili</a></li>
           </ul>
       </nav>
     </header>
@@ -37,15 +37,15 @@
             <hr class="solidred" align="left">
             <section class="image-container">
               <div class="image-list">
-                <img src="/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (1).jpg" alt="">
-                <img src="/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (2).jpg" alt="">
-                <img src="/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (3).jpg" alt="">
-                <img src="/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (4).jpg" alt="">
-                <img src="/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (5).jpg" alt="">
-                <img src="/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (6).jpg" alt="">
-                <img src="/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (7).jpg" alt="">
-                <img src="/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (8).jpg" alt="">
-                <img src="/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (1).jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (2).jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (3).jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (4).jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (5).jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (6).jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (7).jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (8).jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien.jpg" alt="">
               </div>
             </section>
     </main>
