--- a/html/artists/mander.html
+++ b/html/artists/mander.html
@@ -14,9 +14,9 @@
       <p><a href="/Illustrazione_contemporanea/html/index.html">Visioni<br>Illustrate</a></p>
       <nav>
           <ul class="header">
-              <li><a href="/html/artisti.html">Artisti</a></li>
-              <li><a href="/html/mostra.html">Mostra</a></li>
-              <li><a href="/html/info_utili.html">Info utili</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/artisti.html">Artisti</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/mostra.html">Mostra</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/info_utili.html">Info utili</a></li>
           </ul>
       </nav>
     </header>
@@ -35,20 +35,20 @@
             <hr class="solidred" align="left">
             <section class="image-container">
               <div class="image-list">
-                <img src="/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_daydreaming_01_2x.jpg" alt="">
-                <img src="/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_daydreaming_04_2x.jpg" alt="">
-                <img src="/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_daydreaming_05_2x.jpg" alt="">
-                <img src="/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_daydreaming_06_2x.jpg" alt="">
-                <img src="/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_daydreaming_07_2x.jpg" alt="">
-                <img src="/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_daydreaming_09_2x.jpg" alt="">
-                <img src="/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_daydreaming_10_2x.jpg" alt="">
-                <img src="/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_Freundin_ReachOut_2x-scaled.jpg" alt="">
-                <img src="/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_havisamanda_2_2x-scaled.jpg" alt="">
-                <img src="/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_havisamanda_2x.jpg" alt="">
-                <img src="/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_Sokotels_2x.jpg" alt="">
-                <img src="/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_thecock-hotshots_2x-scaled.jpg" alt="">
-                <img src="/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_UM_talo_2_2x-scaled.jpg" alt="">
-                <img src="/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_Vappu2021_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_daydreaming_01_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_daydreaming_04_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_daydreaming_05_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_daydreaming_06_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_daydreaming_07_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_daydreaming_09_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_daydreaming_10_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_Freundin_ReachOut_2x-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_havisamanda_2_2x-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_havisamanda_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_Sokotels_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_thecock-hotshots_2x-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_UM_talo_2_2x-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_Vappu2021_2x.jpg" alt="">
               </div>
             </section>
     </main>
