--- a/html/artists/paukova.html
+++ b/html/artists/paukova.html
@@ -14,9 +14,9 @@
       <p><a href="/Illustrazione_contemporanea/html/index.html">Visioni<br>Illustrate</a></p>
       <nav>
           <ul class="header">
-              <li><a href="/html/artisti.html">Artisti</a></li>
-              <li><a href="/html/mostra.html">Mostra</a></li>
-              <li><a href="/html/info_utili.html">Info utili</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/artisti.html">Artisti</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/mostra.html">Mostra</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/info_utili.html">Info utili</a></li>
           </ul>
       </nav>
     </header>
@@ -35,17 +35,17 @@
             <hr class="solidred" align="left">
             <section class="image-container">
               <div class="image-list">
-                <img src="/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_AFAR_Magazine-scaled.jpg" alt="">
-                <img src="/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Courier_Magazine_1-scaled.jpg" alt="">
-                <img src="/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Courier_Magazine_2-scaled.jpg" alt="">
-                <img src="/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Freitag_Newspaper-scaled.jpg" alt="">
-                <img src="/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Google_Play_2-scaled.jpg" alt="">
-                <img src="/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Google_Play_Career_Marketing-scaled.jpg" alt="">
-                <img src="/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Hamburg_Solo_Show_5-scaled.jpg" alt="">
-                <img src="/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Harvard_Business_Review_2023-scaled.jpg" alt="">
-                <img src="/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_MUBI-scaled.jpg" alt="">
-                <img src="/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_NAVER-scaled.jpg" alt="">
-                <img src="/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_The_Economist_2023-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_AFAR_Magazine-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Courier_Magazine_1-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Courier_Magazine_2-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Freitag_Newspaper-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Google_Play_2-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Google_Play_Career_Marketing-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Hamburg_Solo_Show_5-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Harvard_Business_Review_2023-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_MUBI-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_NAVER-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_The_Economist_2023-scaled.jpg" alt="">
               </div>
             </section>
     </main>
