--- a/html/artists/robertson.html
+++ b/html/artists/robertson.html
@@ -14,9 +14,9 @@
       <p><a href="/Illustrazione_contemporanea/html/index.html">Visioni<br>Illustrate</a></p>
       <nav>
           <ul class="header">
-              <li><a href="/html/artisti.html">Artisti</a></li>
-              <li><a href="/html/mostra.html">Mostra</a></li>
-              <li><a href="/html/info_utili.html">Info utili</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/artisti.html">Artisti</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/mostra.html">Mostra</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/info_utili.html">Info utili</a></li>
           </ul>
       </nav>
     </header>
@@ -36,17 +36,17 @@
         <hr class="solidred" align="left">
       <section class="image-container">
         <div class="image-list">
-          <img src="/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (1).jpg" alt="">
-          <img src="/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (2).jpg" alt="">
-          <img src="/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (3).jpg" alt="">
-          <img src="/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (4).jpg" alt="">
-          <img src="/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (5).jpg" alt="">
-          <img src="/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (6).jpg" alt="">
-          <img src="/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (7).jpg" alt="">
-          <img src="/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (8).jpg" alt="">
-          <img src="/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (9).jpg" alt="">
-          <img src="/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (10).jpg" alt="">
-          <img src="/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson.jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (1).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (2).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (3).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (4).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (5).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (6).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (7).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (8).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (9).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (10).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson.jpg" alt="">
         </div>
       </section>
     </main>
