--- a/html/artists/thompson.html
+++ b/html/artists/thompson.html
@@ -14,9 +14,9 @@
       <p><a href="/Illustrazione_contemporanea/html/index.html">Visioni<br>Illustrate</a></p>
       <nav>
           <ul class="header">
-              <li><a href="/html/artisti.html">Artisti</a></li>
-              <li><a href="/html/mostra.html">Mostra</a></li>
-              <li><a href="/html/info_utili.html">Info utili</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/artisti.html">Artisti</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/mostra.html">Mostra</a></li>
+              <li><a href="/Illustrazione_contemporanea/html/info_utili.html">Info utili</a></li>
           </ul>
       </nav>
     </header>
@@ -35,17 +35,17 @@
         <hr class="solidred" align="left">
       <section class="image-container">
         <div class="image-list">
-          <img src="/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (1).jpg" alt="">
-          <img src="/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (2).jpg" alt="">
-          <img src="/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (3).jpg" alt="">
-          <img src="/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (4).jpg" alt="">
-          <img src="/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (5).jpg" alt="">
-          <img src="/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (6).jpg" alt="">
-          <img src="/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (7).jpg" alt="">
-          <img src="/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (8).jpg" alt="">
-          <img src="/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (9).jpg" alt="">
-          <img src="/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (10).jpg" alt="">
-          <img src="/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson.jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (1).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (2).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (3).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (4).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (5).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (6).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (7).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (8).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (9).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (10).jpg" alt="">
+          <img src="/Illustrazione_contemporanea/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson.jpg" alt="">
         </div>
       </section>
     </main>
