--- a/html/index.html
+++ b/html/index.html
@@ -14,9 +14,9 @@
         <p><a href="/Illustrazione_contemporanea/html/index.html">Visioni<br>Illustrate</a></p>
         <nav>
             <ul class="header">
-                <li><a href="artisti.html">Artisti</a></li>
-                <li><a href="mostra.html">Mostra</a></li>
-                <li><a href="info_utili.html">Info utili</a></li>
+                <li><a href="/Illustrazione_contemporanea/artisti.html">Artisti</a></li>
+                <li><a href="/Illustrazione_contemporanea/mostra.html">Mostra</a></li>
+                <li><a href="/Illustrazione_contemporanea/info_utili.html">Info utili</a></li>
             </ul>
         </nav>
     </header>
@@ -61,25 +61,25 @@
           <section class="home-sliding-cards">
             <div class="card-container">
               <?xml version="1.0" encoding="UTF-8"?><svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 41.68 41.68"><defs><style>.b{fill:#573cff;}</style></defs><path class="b" d="M20.84,0C9.33,0,0,9.33,0,20.84s9.33,20.84,20.84,20.84,20.84-9.33,20.84-20.84S32.35,0,20.84,0Zm5.3,27.94c.98,.97,.98,2.56,0,3.53-.48,.49-1.12,.73-1.76,.73s-1.28-.24-1.77-.73l-10.63-10.63,10.63-10.63c.97-.97,2.56-.97,3.53,0,.98,.98,.98,2.56,0,3.54l-7.09,7.09,7.09,7.1Z"/></svg>
-              <a href="/html/artists/johnson.html" class="cards">
+              <a href="/Illustrazione_contemporanea/html/artists/johnson.html" class="cards">
                 <div class="card">
-                    <img src="/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_DAWG_2x-scaled.jpg" alt="">
+                    <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_DAWG_2x-scaled.jpg" alt="">
                       <div class="container">
                         <h4>Adrian Johnson</h4>
                       </div>
                     </div>
                   </a>
-                <a href="/html/artists/robertson.html" class="cards">
+                <a href="/Illustrazione_contemporanea/html/artists/robertson.html" class="cards">
                   <div class="card">
-                      <img src="/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (1).jpg" alt="">
+                      <img src="/Illustrazione_contemporanea/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (1).jpg" alt="">
                         <div class="container">
                           <h4>Emily Robertson</h4>
                         </div>
                       </div>
                     </a>
-                  <a href="/html/artists/clark.html" class="cards">
+                  <a href="/Illustrazione_contemporanea/html/artists/clark.html" class="cards">
                     <div class="card">
-                      <img src="/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (6).jpg" alt="">
+                      <img src="/Illustrazione_contemporanea/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (6).jpg" alt="">
                         <div class="container">
                           <h4>Hattie Clark</h4>
                     </div>
