--- a/html/info_utili.html
+++ b/html/info_utili.html
@@ -14,9 +14,9 @@
         <p><a class="black" href="/Illustrazione_contemporanea/html/index.html">Visioni<br>Illustrate</a></p>
         <nav>
             <ul class="header">
-                <li><a class="black" href="artisti.html">Artisti</a></li>
-                <li><a class="black" href="mostra.html">Mostra</a></li>
-                <li><a class="black" href="info_utili.html">Info utili</a></li>
+                <li><a class="black" href="/Illustrazione_contemporanea/artisti.html">Artisti</a></li>
+                <li><a class="black" href="/Illustrazione_contemporanea/mostra.html">Mostra</a></li>
+                <li><a class="black" href="/Illustrazione_contemporanea/info_utili.html">Info utili</a></li>
             </ul>
         </nav>
     </header>
@@ -48,7 +48,7 @@
                     Franchetti, 5
                     Catania (95123)
                 </p>
-                <img src="/img/gps.PNG" alt="">       
+                <img src="/Illustrazione_contemporanea/img/gps.PNG" alt="">       
         </section>
     </main>
     <footer class="info">
