--- a/html/mostra.html
+++ b/html/mostra.html
@@ -14,9 +14,9 @@
         <p><a href="/Illustrazione_contemporanea/html/index.html">Visioni<br>Illustrate</a></p>
         <nav>
             <ul class="header">
-                <li><a href="artisti.html">Artisti</a></li>
-                <li><a href="mostra.html">Mostra</a></li>
-                <li><a href="info_utili.html">Info utili</a></li>
+                <li><a href="/Illustrazione_contemporanea/artisti.html">Artisti</a></li>
+                <li><a href="/Illustrazione_contemporanea/mostra.html">Mostra</a></li>
+                <li><a href="/Illustrazione_contemporanea/info_utili.html">Info utili</a></li>
             </ul>
         </nav>
     </header>
@@ -73,10 +73,10 @@
                     sia interessato a esplorare le nuove frontiere dell'espressione creativa.
                 </p> 
                 <div class="image-container">    
-                <img src="/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_FRAWG_2x-scaled.jpg" alt="">
-                <img src="/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (7).jpg" alt="">
-                <img src="/img/artisti/icinori/icinori/AP_Icinori_Whereby-W_2x.jpg" alt="">
-                <img src="/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Courier_Magazine_1-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_FRAWG_2x-scaled.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (7).jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_Whereby-W_2x.jpg" alt="">
+                <img src="/Illustrazione_contemporanea/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Courier_Magazine_1-scaled.jpg" alt="">
                 </div>
             </section>
     </main>
